# DashApp

./: config.py  dash_app.py  main.py  pyproject.toml  report_agent.py  report_display.py  report_handler.py  system_prompts.py
mcp_client/: pyproject.toml
